--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
             <label for="senha">Senha</label>
              <div class="input-group mb-3">
-                <span class="input-group-text" id="addon-usuario">@</span>
-                <input type="text" class="form-control" id="usuario" name="usuario" aria-label="usuario" aria-describedby="addon-senha">
+                <span class="input-group-text" id="addon-senha">@</span>
+                <input type="password" class="form-control" id="senha" name="senha" aria-label="senha" aria-describedby="addon-usuario">
             </div>
             <a href="#">Esqueci a senha</a>
             <a href="#">Criar conta</a>
